--- a/client/src/app/features/base/table/pages/table-detail/views/map-view/map-view.component.html
+++ b/client/src/app/features/base/table/pages/table-detail/views/map-view/map-view.component.html
@@ -1,88 +1,92 @@
 <p-popover #popover appendTo="body" styleClass="w-xs">
-  <div class="flex flex-col gap-4">
-    <div class="flex flex-col gap-1">
-      <label for="geoPointField" class="text-sm">GeoPoint Field</label>
-      <p-select
-        id="geoPointField"
-        [options]="geoPointColumns"
-        optionValue="name"
-        placeholder="Select here..."
-        [(ngModel)]="selectedGeoPointField"
-        [checkmark]="true"
-        fluid
-      >
-        <ng-template #selectedItem let-selectedItem>
-          <div class="flex items-center gap-2">
-            <i [class]="selectedItem.dataType | fieldIcon"></i>
-            <p>
-              {{ selectedItem.presentation?.uiName || selectedItem.name }}
-              @if (selectedItem.presentation?.uiName) {
-                <span class="text-xs text-surface-500">{{ selectedItem.name }}</span>
-              }
-            </p>
-          </div>
-        </ng-template>
-        <ng-template #item let-item>
-          <div class="flex items-center gap-2">
-            <i [class]="item.dataType | fieldIcon"></i>
-            <p>
-              {{ item.presentation?.uiName || item.name }}
-              @if (item.presentation?.uiName) {
-                <span class="text-xs text-surface-500">{{ item.name }}</span>
-              }
-            </p>
-          </div>
-        </ng-template>
-      </p-select>
+  <ng-template #content>
+    <div class="flex flex-col gap-4">
+      <div class="flex flex-col gap-1">
+        <label for="geoPointField" class="text-sm">GeoPoint Field</label>
+        <p-select
+          id="geoPointField"
+          [options]="geoPointColumns"
+          optionValue="name"
+          placeholder="Select here..."
+          [(ngModel)]="selectedGeoPointField"
+          [checkmark]="true"
+          fluid
+        >
+          <ng-template #selectedItem let-selectedItem>
+            <div class="flex items-center gap-2">
+              <i [class]="selectedItem.dataType | fieldIcon"></i>
+              <p>
+                {{ selectedItem.presentation?.uiName || selectedItem.name }}
+                @if (selectedItem.presentation?.uiName) {
+                  <span class="text-xs text-surface-500">{{ selectedItem.name }}</span>
+                }
+              </p>
+            </div>
+          </ng-template>
+          <ng-template #item let-item>
+            <div class="flex items-center gap-2">
+              <i [class]="item.dataType | fieldIcon"></i>
+              <p>
+                {{ item.presentation?.uiName || item.name }}
+                @if (item.presentation?.uiName) {
+                  <span class="text-xs text-surface-500">{{ item.name }}</span>
+                }
+              </p>
+            </div>
+          </ng-template>
+        </p-select>
+      </div>
+      <div class="flex flex-col gap-1">
+        <label for="displayField" class="text-sm">Display Field</label>
+        <p-select
+          id="displayField"
+          [options]="columns()"
+          optionValue="name"
+          placeholder="Select here..."
+          [(ngModel)]="selectedDisplayField"
+          [checkmark]="true"
+          [showClear]="true"
+          fluid
+        >
+          <ng-template #selectedItem let-selectedItem>
+            <div class="flex items-center gap-2">
+              <i [class]="selectedItem.dataType | fieldIcon"></i>
+              <p>
+                {{ selectedItem.presentation?.uiName || selectedItem.name }}
+                @if (selectedItem.presentation?.uiName) {
+                  <span class="text-xs text-surface-500">{{ selectedItem.name }}</span>
+                }
+              </p>
+            </div>
+          </ng-template>
+          <ng-template #item let-item>
+            <div class="flex items-center gap-2">
+              <i [class]="item.dataType | fieldIcon"></i>
+              <p>
+                {{ item.presentation?.uiName || item.name }}
+                @if (item.presentation?.uiName) {
+                  <span class="text-xs text-surface-500">{{ item.name }}</span>
+                }
+              </p>
+            </div>
+          </ng-template>
+        </p-select>
+        <p class="text-surface-500 text-xs">
+          The field to display as the title of the map markers.
+        </p>
+      </div>
     </div>
-    <div class="flex flex-col gap-1">
-      <label for="displayField" class="text-sm">Display Field</label>
-      <p-select
-        id="displayField"
-        [options]="columns()"
-        optionValue="name"
-        placeholder="Select here..."
-        [(ngModel)]="selectedDisplayField"
-        [checkmark]="true"
-        [showClear]="true"
-        fluid
-      >
-        <ng-template #selectedItem let-selectedItem>
-          <div class="flex items-center gap-2">
-            <i [class]="selectedItem.dataType | fieldIcon"></i>
-            <p>
-              {{ selectedItem.presentation?.uiName || selectedItem.name }}
-              @if (selectedItem.presentation?.uiName) {
-                <span class="text-xs text-surface-500">{{ selectedItem.name }}</span>
-              }
-            </p>
-          </div>
-        </ng-template>
-        <ng-template #item let-item>
-          <div class="flex items-center gap-2">
-            <i [class]="item.dataType | fieldIcon"></i>
-            <p>
-              {{ item.presentation?.uiName || item.name }}
-              @if (item.presentation?.uiName) {
-                <span class="text-xs text-surface-500">{{ item.name }}</span>
-              }
-            </p>
-          </div>
-        </ng-template>
-      </p-select>
-      <p class="text-surface-500 text-xs">The field to display as the title of the map markers.</p>
+
+    <p-divider />
+
+    <div class="flex justify-end gap-2 flex-1">
+      <p-button
+        label="Apply changes"
+        [disabled]="!selectedGeoPointField"
+        (click)="loadTable(); popover.hide()"
+      />
     </div>
-  </div>
-
-  <p-divider />
-
-  <div class="flex justify-end gap-2 flex-1">
-    <p-button
-      label="Apply changes"
-      [disabled]="!selectedGeoPointField"
-      (click)="loadTable(); popover.hide()"
-    />
-  </div>
+  </ng-template>
 </p-popover>
 
 <open-map
