--- a/client/src/app/shared/spreadsheet/components/view-options/data-view-options/data-view-options.component.html
+++ b/client/src/app/shared/spreadsheet/components/view-options/data-view-options/data-view-options.component.html
@@ -1,102 +1,106 @@
 <p-menu #columnMenu [model]="menuItems()" [popup]="true" appendTo="body" />
 
 <p-popover #popover [dismissable]="!columnMenu.visible">
-  <div class="w-md">
-    <!-- Body -->
-    <div class="overflow-y-auto max-h-100">
-      @if (rules().length) {
-        <div cdkDropList (cdkDropListDropped)="onDropped($event)" class="flex flex-col gap-2">
-          <div
-            *ngFor="let item of rules(); let i = index; let first = first"
-            cdkDrag
-            cdkDragLockAxis="y"
-            class="flex items-center justify-between gap-6"
-          >
-            <div class="flex min-w-0 items-center gap-2">
-              <!-- Drag handle -->
-              <div cdkDragHandle class="mt-2">
-                <i class="icon icon-grip-vertical"></i>
+  <ng-template #content>
+    <div class="w-md">
+      <!-- Body -->
+      <div class="overflow-y-auto max-h-100">
+        @if (rules().length) {
+          <div cdkDropList (cdkDropListDropped)="onDropped($event)" class="flex flex-col gap-2">
+            <div
+              *ngFor="let item of rules(); let i = index; let first = first"
+              cdkDrag
+              cdkDragLockAxis="y"
+              class="flex items-center justify-between gap-6"
+            >
+              <div class="flex min-w-0 items-center gap-2">
+                <!-- Drag handle -->
+                <div cdkDragHandle class="mt-2">
+                  <i class="icon icon-grip-vertical"></i>
+                </div>
+
+                <!-- Field name -->
+                <div>
+                  {{ first ? (isGroupType() ? 'group by' : 'sort by') : 'then by' }}
+                  <span class="font-medium">
+                    {{ item.column.name }}
+                  </span>
+                </div>
               </div>
 
-              <!-- Field name -->
-              <div>
-                {{ first ? (isGroupType() ? 'group by' : 'sort by') : 'then by' }}
-                <span class="font-medium">
-                  {{ item.column.name }}
-                </span>
-              </div>
-            </div>
-
-            <div class="flex items-center gap-2">
-              <!-- ASC/DESC -->
               <div class="flex items-center gap-2">
-                <label for="switch">ascending:</label>
-                <p-toggleswitch
-                  inputId="switch"
-                  [ngModel]="item.asc"
-                  (onChange)="toggleAsc(item)"
+                <!-- ASC/DESC -->
+                <div class="flex items-center gap-2">
+                  <label for="switch">ascending:</label>
+                  <p-toggleswitch
+                    inputId="switch"
+                    [ngModel]="item.asc"
+                    (onChange)="toggleAsc(item)"
+                  />
+                </div>
+
+                <!-- Remove -->
+                <p-button
+                  variant="text"
+                  severity="secondary"
+                  size="small"
+                  icon="icon icon-x"
+                  (click)="removeColumn(i)"
                 />
               </div>
-
-              <!-- Remove -->
-              <p-button
-                variant="text"
-                severity="secondary"
-                size="small"
-                icon="icon icon-x"
-                (click)="removeColumn(i)"
-              />
             </div>
           </div>
-        </div>
-      } @else {
-        <div class="leading-6">
-          <p class="font-medium">
-            {{ isGroupType() ? 'No groups applied to this view' : 'No sorts applied to this view' }}
-          </p>
-          <p class="text-surface-500 text-sm">
-            {{
-              isGroupType()
-                ? 'Add a column below to group the view'
-                : 'Add a column below to sort the view'
-            }}
-          </p>
-        </div>
-      }
-    </div>
+        } @else {
+          <div class="leading-6">
+            <p class="font-medium">
+              {{
+                isGroupType() ? 'No groups applied to this view' : 'No sorts applied to this view'
+              }}
+            </p>
+            <p class="text-surface-500 text-sm">
+              {{
+                isGroupType()
+                  ? 'Add a column below to group the view'
+                  : 'Add a column below to sort the view'
+              }}
+            </p>
+          </div>
+        }
+      </div>
 
-    <p-divider />
+      <p-divider />
 
-    <!-- Footer -->
-    <div class="flex items-center justify-between">
-      @if (menuItems().length) {
-        <p-button
-          variant="text"
-          [label]="isReachLimitColumn() ? 'Limit reached' : 'Add column'"
-          severity="secondary"
-          icon="icon icon-chevron-down"
-          iconPos="right"
-          [disabled]="isReachLimitColumn()"
-          (click)="columnMenu.show($event)"
-        />
-      } @else {
-        All columns have been added
-      }
-      <div class="flex justify-end gap-2 flex-1">
-        <p-button
-          label="Reset"
-          severity="secondary"
-          [text]="true"
-          (click)="reset(); popover.hide()"
-        />
-        <p-button
-          label="Apply changes"
-          [disabled]="!totalRules()"
-          (click)="applyChanges(); popover.hide()"
-        />
+      <!-- Footer -->
+      <div class="flex items-center justify-between">
+        @if (menuItems().length) {
+          <p-button
+            variant="text"
+            [label]="isReachLimitColumn() ? 'Limit reached' : 'Add column'"
+            severity="secondary"
+            icon="icon icon-chevron-down"
+            iconPos="right"
+            [disabled]="isReachLimitColumn()"
+            (click)="columnMenu.show($event)"
+          />
+        } @else {
+          All columns have been added
+        }
+        <div class="flex justify-end gap-2 flex-1">
+          <p-button
+            label="Reset"
+            severity="secondary"
+            [text]="true"
+            (click)="reset(); popover.hide()"
+          />
+          <p-button
+            label="Apply changes"
+            [disabled]="!totalRules()"
+            (click)="applyChanges(); popover.hide()"
+          />
+        </div>
       </div>
     </div>
-  </div>
+  </ng-template>
 </p-popover>
 
 @if (isGroupType()) {
