--- a/client/src/app/layouts/main-layout/main-layout.component.html
+++ b/client/src/app/layouts/main-layout/main-layout.component.html
@@ -2,7 +2,7 @@
 
 <div class="app">
   <div class="app-main w-full h-full flex">
-    <div class="flex flex-col justify-between border-r-1 border-surface-200">
+    <div class="flex flex-col justify-between border-r border-surface-200">
       <div>
         <div class="flex justify-center p-2">
           <p-image
