--- a/client/src/app/features/base/studio/table/pages/table-list/table-list.component.html
+++ b/client/src/app/features/base/studio/table/pages/table-list/table-list.component.html
@@ -43,7 +43,7 @@
   (onSave)="onTableEditorSave($event)"
 />
 
-<div class="flex items-center justify-between pl-4 pr-2 py-2 border-b-1 border-surface-200">
+<div class="flex items-center justify-between pl-4 pr-2 py-2 border-b border-surface-200">
   <div>Tables</div>
   <div class="flex">
     <p-button
