refactor: Relocate API key management feature into the base details section.

--- a/client/src/app/features/base/base.component.html
+++ b/client/src/app/features/base/base.component.html
@@ -11,8 +11,10 @@
     <p-selectbutton [options]="options" [ngModel]="view()" [unselectable]="true">
       <ng-template #item let-item>
         <routerLink [routerLink]="item.routerLink">
-          <i [class]="item.icon"></i>
-          {{ item.label }}
+          <div class="flex items-center gap-1">
+            <i [class]="item.icon"></i>
+            {{ item.label }}
+          </div>
         </routerLink>
       </ng-template>
     </p-selectbutton>
