--- a/client/src/app/layouts/main-layout/main-layout.component.html
+++ b/client/src/app/layouts/main-layout/main-layout.component.html
@@ -22,12 +22,25 @@
             <i class="icon icon-layers" style="font-size: 16px"></i>
           </li>
           <li
-            class="flex flex-items gap-2 items-center p-3 rounded-lg hover:bg-gray-100 text-surface-500 cursor-pointer"
-            pTooltip="API Keys"
-            routerLink="/api-keys"
+            class="flex flex-items gap-2 items-center p-3 rounded-lg text-surface-300"
+            pTooltip="Monitor"
             routerLinkActive="bg-gray-100 text-surface-700"
           >
-            <i class="icon icon-key" style="font-size: 16px"></i>
+            <i class="icon icon-activity" style="font-size: 16px"></i>
+          </li>
+          <li
+            class="flex flex-items gap-2 items-center p-3 rounded-lg text-surface-300"
+            pTooltip="Users"
+            routerLinkActive="bg-gray-100 text-surface-700"
+          >
+            <i class="icon icon-users" style="font-size: 16px"></i>
+          </li>
+          <li
+            class="flex flex-items gap-2 items-center p-3 rounded-lg text-surface-300"
+            pTooltip="Settings"
+            routerLinkActive="bg-gray-100 text-surface-700"
+          >
+            <i class="icon icon-settings" style="font-size: 16px"></i>
           </li>
         </ul>
       </div>
