--- a/client/src/app/features/base/details/details.component.html
+++ b/client/src/app/features/base/details/details.component.html
@@ -18,6 +18,7 @@
       </a>
       <a
         routerLink="api-keys"
+        routerLinkActive="bg-surface-200!"
         class="flex items-center gap-3 px-3 py-2 rounded-md hover:bg-surface-100 text-surface-700 cursor-pointer"
       >
         <i class="icon icon-key-round"></i>
