--- a/client/src/app/features/base/details/details.component.html
+++ b/client/src/app/features/base/details/details.component.html
@@ -5,6 +5,8 @@
     </div>
     <nav class="flex-1 px-2 space-y-1">
       <a
+        routerLink="indexes"
+        routerLinkActive="bg-surface-200!"
         class="flex items-center gap-3 px-3 py-2 rounded-md hover:bg-surface-100 text-surface-700 cursor-pointer"
       >
         <i class="icon icon-list-indent-increase"></i>
